--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
+    "@prisma/client": "^5.22.0",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
     "next": "^15.0.3",
@@ -29,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "postcss": "^8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
